fixed remove overlap, replace mergesort with standard sort, doing both dimensions directly for repair order

--- a/index.css
+++ b/index.css
@@ -26,13 +26,13 @@ html,body {
 }
 
 .ufo-image {
+    padding-bottom: 10px;
     width: 64px;
     height: 64px;
-    position:absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    right: 10px;
+    position: relative;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    left: 50%;
     display: block;
 }
 
